--- a/main.html
+++ b/main.html
@@ -66,7 +66,7 @@
 			<td>
 				<table border=1 width="100%">
 					<thead><tr><th>Nested Table 4</th></tr></thead>
-					<tr><td id="black">HTML</td></tr>
+					<tr><td style="color:white; background-color:black">HTML</td></tr>
 				</table>
 			</td>
 		</tr>
